manifests/gateway-istio-ingress/istio-gateway-export.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-x
spec:
  type: ClusterIP
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  ports:
  - name: http2
    port: 80
