manifests/gateway-istio-ingress/gateway.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: external-istio-gateway
spec:
  gatewayClassName: gke-l7-gxlb-mc
  listeners:
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      selector:
        matchLabels:
          gateway: external-istio-gateway
