manifests/gateway-istio-ingress/httproute.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: istio-gateway-route
  labels:
    gateway: external-istio-gateway
spec:
  hostnames:
  - "*"
  rules:
  - forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: istio-ingressgateway-x
      port: 80
